frontend/src/styles/forms.css
/* ... */
#get-started-form .steps li.active i {
    background-color: var(--tertiary);
    border: solid 1px  #3b2b220a;
    color: black;
}

#get-started-form .steps li.active span,
#get-started-form .steps li.active .supporting-text
{
    color: black;
}

.form-panel {
    flex: 3;
    height: 100%;
    position: relative;
    display: flex;
    align-items: center; 
    justify-content: center;
    flex-direction: column;
    overflow: scroll;
    overflow-x: hidden;
    text-align: center;
    border-left: solid 1px rgba(0,0,0,0.1);
}

.form-panel h3 {
    font-size: clamp(1.5rem, 1.5vw, 4rem);
    font-weight: 600;
    margin-bottom: 0.5rem;
}

.form-panel p {
    font-size: clamp(1rem, 1vw, 3rem);
    max-width: 90%;
    margin: 0 auto;
}

.form-panel .buttons {
    position: absolute;
    display: flex;
    justify-content: space-between;
    width: 100%;
    bottom: 2%;
    padding: 0 1rem;
}

.form-panel button {
    padding: 6px 12px;
    border-radius: 4px;
    background-color: var(--secondary);
    color: white;
    border: none;
    outline: none;
    cursor: pointer;
}

.choice-buttons {
    display: flex;
    gap: 2rem;
    margin-top: 3rem;
}

.choice-buttons input[type="radio"] {
    display: none;
}

#industry-choice-buttons {
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
}

.choice-button  {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    gap: 1rem;
    width: clamp(4rem, 12vw, 12rem);
    aspect-ratio: 1 / 1;
    border-radius: 4px;
    background-color: var(--disabled);
    border: solid 1px rgba(0,0,0,0.1);
    cursor: pointer;
    transition: 0.15s;
}

.choice-button  i:not(.checked-indicator i) {
    font-size: clamp(1rem, 3vw, 6rem);
    color: gray;
}

.choice-button  .checked-indicator {
    display: none;
    position: absolute;
    padding: 1.2rem;
    top: 0;
    right: 0;
    background-color: var(--secondary);
    color: white;
    clip-path: polygon(0 0, 100% 100%, 100% 0);
    border-radius: 0 4px 0 0;
}

.choice-button .selected .checked-indicator {
    display: block;
}

.choice-button  .checked-indicator i {
    position: absolute;
    top: 4px;
    right: 4px;
}

.choice-button  label {
    color: gray;
    pointer-events: none;
}

.choice-button:hover,
.choice-button.selected
{
    background-color: var(--tertiary);
    border: solid 1px  #3b2b220a;
}

.choice-button:hover i:not(.checked-indicator i),
.choice-button.selected i:not(.checked-indicator i)
{
    color: var(--secondary);
}

.choice-button:hover label,
.choice-button.selected label
{
    color: var(--secondary);
}

.form-panel .form-details {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    margin-top: 2rem;
}

.form-panel .work-exp-entry {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.form-panel .row {
    width: 100%;
    justify-content: space-between;
    gap: 1rem;
}

.form-panel .form-group {
    display: flex;
    align-items: start;
    flex-direction: column;
    gap: 1rem;
    width: 100%;
}

.form-panel .form-group input,
.form-panel .form-group textarea
{
    font-size: clamp(0.5rem, 1vw, 1.5rem);
    width: 100%;
}

.form-panel .skill-select {
    padding: 5px 10px;
    font-size: clamp(0.5rem, 1vw, 1.5rem);
    border-radius: 2px;
    cursor: pointer;
}

.form-panel .form-group label {
    font-size: clamp(0.5rem, 1vw, 2rem);
    font-weight: 600;
    margin-bottom: -0.5rem;
}

.form-panel .form-group input {
    padding: 5px 10px;
}

.form-panel .form-group textarea {
    height: clamp(3rem, 5vw, 5rem);
    padding: 5px 10px;
    resize: none;
}

.form-panel .wrapper {
    position: relative;
    display: flex;
    align-items: center;
    gap: 0.5rem;
    width: 100%;
}

.form-panel .wrapper i {
    position: absolute;
    transform: translate(-50%, -50%);
    top: 50%;
    left: 6%;
}

.form-panel .wrapper:has(i) input {
    padding-left: 2rem;
}

.user-skills {
    max-width: 75%;
}

.added-skills {
    display: flex;
    list-style-type: none;
    gap: 1rem;
    flex-wrap: wrap;
}

.added-skills li {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    font-size: clamp(0.5rem, 1vw, 1.5rem);
    border-radius: 4px;
    background-color: var(--tertiary);
    cursor: pointer;
}

.added-skills li span {
    padding: 10px 15px;
    padding-right: 0;
    font-weight: 500;
}

.added-skills li i {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    padding: 10px;
    padding-right: 15px;
    border-radius: 0 4px 4px 0;
}

.added-work-exp {
    display: flex;
    gap: 1rem;
    margin-top: 1rem;
    list-style-type: none;
}

.added-work-exp li {
    display: flex;
    font-size: clamp(0.5rem, 1vw, 1.5rem);
    border-radius: 4px;
    background-color: var(--tertiary);
    cursor: pointer;
}

.added-work-exp li span {
    padding: 10px 15px;
    padding-right: 0;
    font-weight: 500;
}

.added-work-exp li i {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    padding: 10px;
    padding-right: 15px;
    border-radius: 0 4px 4px 0;
}

